refactor: mapper구현에 따른 코드 수정